[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/ui/subcomponents/animated_progress_bar/AnimatedProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/ui/3d/name_plate/NamePlate.gd" type="Script" id=3]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.15, 0.075 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_fixed_size = true
params_billboard_mode = 1
albedo_texture = SubResource( 2 )

[node name="NamePlate" type="Spatial"]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 50 )
transparent_bg = true
handle_input_locally = false
disable_3d = true
usage = 0
render_target_v_flip = true

[node name="VBoxContainer" type="VBoxContainer" parent="Viewport"]
margin_right = 100.0
margin_bottom = 50.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NameLabel" type="Label" parent="Viewport/VBoxContainer"]
margin_right = 100.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "[name]"
align = 1
valign = 1

[node name="HealthBar" parent="Viewport/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 18.0
margin_right = 100.0
margin_bottom = 38.0

[node name="ManaBar" parent="Viewport/VBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 42.0
margin_right = 100.0
margin_bottom = 62.0

[node name="Sprite3D" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )
